--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</header>
 	<main>
 		<div class="tweet-input-area">
-			<img src="./you-got-this.jpg" class="profile-pic">
+			<img src="images/you-got-this.jpg" class="profile-pic">
 			<textarea placeholder="What's happening?" id="tweet-input"></textarea>
 		</div>
 		<button id="tweet-btn">Post</button>
